@@ -1,54 +1,0 @@
-name: CI
-
-on:
-  push:
-  pull_request:
-  workflow_dispatch:
-  schedule:
-    - cron: '20 5 * * 6'
-
-jobs:
-  test:
-    strategy:
-      fail-fast: false
-      matrix:
-        runner: [ubuntu-latest]
-        perl: [ '5.20', '5.22', '5.24', '5.26', '5.28', '5.30', '5.32', '5.34', '5.36', '5.38', '5.40' ]
-
-    runs-on: ${{matrix.runner}}
-    name: OS ${{matrix.runner}} Perl ${{matrix.perl}}
-
-    steps:
-    - uses: actions/checkout@v3
-
-    - name: Set up perl
-      uses: shogo82148/actions-setup-perl@v1
-      with:
-          perl-version: ${{ matrix.perl }}
-          distribution: ${{ ( startsWith( matrix.runner, 'windows-' ) && 'strawberry' ) || 'default' }}
-
-    - name: Show Perl Version
-      run: |
-        perl -v
-
-    - name: Install dependencies
-      run: |
-        cpanm -v
-        cpanm --notest --installdeps .
-
-    - name: Show Errors on Ubuntu
-      if:  ${{ failure() && startsWith( matrix.runner, 'ubuntu-')}}
-      run: |
-         cat /home/runner/.cpanm/work/*/build.log
-
-    - name: Show Errors on OSX
-      if:  ${{ failure() && startsWith( matrix.runner, 'macos-')}}
-      run: |
-         cat  /Users/runner/.cpanm/work/*/build.log
-
-    - name: Run tests
-      env:
-        AUTHOR_TESTING: 1
-        RELEASE_TESTING: 1
-      run: |
-        prove -l
